All_Component_DX/force-app/main/default/objects/Question_Bank__c/Question_Bank__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store Questions which can be used in the Checklist type of SFM transaction process.</description>
    <label>Question Bank</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>