All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Help_URL__c.field-meta.xml
<CustomField>
    <fullName>Help_URL__c</fullName>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>