All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>This field is used to hold the allowed length of the text response</description>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>