All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <description>This field is used to hold the total number of digits allowed for number type of response.</description>
    <label>Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>