All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>This field is used to hold the question data</description>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>