All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/QuestionID__c.field-meta.xml
<CustomField>
    <fullName>QuestionID__c</fullName>
    <description>This field is used to hold the unique Id to identify the questions</description>
    <label>QuestionID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>