All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/QuestionJSON__c.field-meta.xml
<CustomField>
    <fullName>QuestionJSON__c</fullName>
    <description>This field is used to hold the question information in JSON string</description>
    <label>QuestionJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>