All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Response_Set__c.field-meta.xml
<CustomField>
    <fullName>Response_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response Set</label>
    <referenceTo>QB_Response_Set__c</referenceTo>
    <relationshipLabel>Question Banks (Response Set)</relationshipLabel>
    <relationshipName>Question_Bank</relationshipName>
    <type>Lookup</type>
</CustomField>