All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <description>This field is used to hold the number of digits allowed after decimal for number type of response.</description>
    <label>Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>