All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>This field is used to hold the short name of the question.</description>
    <label>Short Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>