All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/SM_Description_Required__c.field-meta.xml
<CustomField>
    <fullName>SM_Description_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, description is required for attachment question</description>
    <label>Description Required</label>
    <type>Checkbox</type>
</CustomField>