All_Component_DX/force-app/main/default/objects/Question_Bank__c/fields/SM_Show_In_Smart_Doc__c.field-meta.xml
<CustomField>
    <fullName>SM_Show_In_Smart_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will show the image in smart doc for attachment question</description>
    <label>Show In Smart Doc</label>
    <type>Checkbox</type>
</CustomField>